--- a/NUEVA/index.html
+++ b/NUEVA/index.html
@@ -675,7 +675,7 @@
                 coffee, I remember the times my son used to play Fortnite all day and grind in Fortnite. I am proud
                 to say that all that grind was helpful for creating consistency in my son”</blockquote>
               <div class="author-detail">
-                <div class="name text-gray-dark text-uppercase fs-3">Karla Velasco</div>
+                <div class="name text-gray-dark text-uppercase fs-3">Alfonso Lambert</div>
               </div>
             </div>
           </div>
@@ -896,4 +896,5 @@
 
 
 </html>
+
 
