--- a/NUEVA/index.html
+++ b/NUEVA/index.html
@@ -685,7 +685,7 @@
                 first thing I visited Bolivia after leaving the country for 6-7 years and I have to admit that
                 everything was absolutely scrumptious and I loved the Fortnite decorations all around the shop.”</blockquote>
               <div class="author-detail">
-                <div class="name text-gray-dark text-uppercase fs-3">Laura Justiniano</div>
+                <div class="name text-gray-dark text-uppercase fs-3">Luke Justiniano</div>
               </div>
             </div>
           </div>
@@ -896,5 +896,6 @@
 
 
 </html>
+
 
 
